--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1",
-    "genesis-ui-app": "^0.0.1",
+    "genesis-ui-app": "^0.0.15",
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "bootstrap": "^5.1.3",
-    "axios": "^0.27.2"
+    "react-bootstrap": "^2.3.0",
+    "axios": "^0.27.2",
+    "css-loader": "^5.2.7"
   },
   "dependencies": {
     "@babel/runtime": "^7.17.7"
